Enforcing specific Java versions for compilation